<resources>
    <string name="app_name">NewsApp</string>
    <string name="ImageView_news_text">Image for news</string>
    <string name="title_news">Aprenda sobre edição de imagens</string>
    <string name="date_news">10/05/2022</string>
    <string name="news_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="author_news">Davi Ramos Lima</string>
    <string name="prev_text">Anterior</string>
    <string name="next_text">Próximo</string>
</resources>